implementation of reading SLHA output files

--- a/templates/slha_io.hpp.in
+++ b/templates/slha_io.hpp.in
@@ -73,7 +73,7 @@ private:
  * Reads all model parameters from a SLHA output file.
  */
 template <class T>
-void @ModelName@_slha_io::fill(@ModelName@<T>&) const
+void @ModelName@_slha_io::fill(@ModelName@<T>& model) const
 {
 @readLesHouchesOutputParameters@
 }
