--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -60,6 +60,9 @@ private:
 
    void calculate_DRbar_gauge_couplings();
    void calculate_DRbar_yukawa_couplings();
+   void calculate_Yu_DRbar();
+   void calculate_Yd_DRbar();
+   void calculate_Ye_DRbar();
    double calculate_delta_alpha_em(double) const;
    double calculate_delta_alpha_s(double) const;
    void update_scale();
