--- a/templates/two_scale_initial_guesser.hpp.in
+++ b/templates/two_scale_initial_guesser.hpp.in
@@ -53,12 +53,25 @@ private:
    @ModelName@<Two_scale>* model;
    @ModelName@_input_parameters input_pars;
    QedQcd oneset;
+   double mu_guess;
+   double mc_guess;
+   double mt_guess;
+   double md_guess;
+   double ms_guess;
+   double mb_guess;
+   double me_guess;
+   double mm_guess;
+   double mtau_guess;
    @ModelName@_low_scale_constraint<Two_scale> low_constraint;
    @ModelName@_susy_scale_constraint<Two_scale> susy_constraint;
    @ModelName@_high_scale_constraint<Two_scale> high_constraint;
 
    void guess_susy_parameters();
    void guess_soft_parameters();
+   void calculate_DRbar_yukawa_couplings();
+   void calculate_Yu_DRbar();
+   void calculate_Yd_DRbar();
+   void calculate_Ye_DRbar();
 };
 
 } // namespace flexiblesusy
