--- a/model_files/NMSSM/FlexibleSUSY.m.in
+++ b/model_files/NMSSM/FlexibleSUSY.m.in
@@ -54,7 +54,10 @@ LowScale = SM[MZ];
 
 LowScaleFirstGuess = SM[MZ];
 
-LowScaleInput={
+LowScaleInput = {
+   {Yu, Automatic},
+   {Yd, Automatic},
+   {Ye, Automatic},
    {vd, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Cos[ArcTan[TanBeta]]},
    {vu, 2 MZDRbar / Sqrt[GUTNormalization[g1]^2 g1^2 + g2^2] Sin[ArcTan[TanBeta]]}
 };
@@ -65,7 +68,10 @@ InitialGuessAtLowScale = {
    {\[Lambda], LambdaInput},
    {\[Kappa], 0.1},
    {vS, 1000},
-   {ms2, SM[MZ]^2}
+   {ms2, SM[MZ]^2},
+   {Yu, Automatic},
+   {Yd, Automatic},
+   {Ye, Automatic}
 };
 
 InitialGuessAtHighScale = {};
