--- a/templates/two_scale_initial_guesser.cpp.in
+++ b/templates/two_scale_initial_guesser.cpp.in
@@ -104,57 +104,55 @@ void @ModelName@_initial_guesser<Two_scale>::guess_susy_parameters()
 
    // apply user-defined initial guess at the low scale
 @initialGuessAtLowScale@
-
-   calculate_DRbar_yukawa_couplings();
 }
 
 void @ModelName@_initial_guesser<Two_scale>::calculate_DRbar_yukawa_couplings()
 {
-   calculate_Yu_DRbar();
-   calculate_Yd_DRbar();
-   calculate_Ye_DRbar();
+   calculate_@UpYukawa@_DRbar();
+   calculate_@DownYukawa@_DRbar();
+   calculate_@ElectronYukawa@_DRbar();
 }
 
-void @ModelName@_initial_guesser<Two_scale>::calculate_Yu_DRbar()
+void @ModelName@_initial_guesser<Two_scale>::calculate_@UpYukawa@_DRbar()
 {
    Eigen::Matrix<double,3,3> topDRbar(Eigen::Matrix<double,3,3>::Zero());
    topDRbar(0,0) = mu_guess;
    topDRbar(1,1) = mc_guess;
    topDRbar(2,2) = mt_guess;
 
-   Eigen::Matrix<double,3,3> new_Yu;
+   Eigen::Matrix<double,3,3> new_@UpYukawa@;
 
 @setDRbarUpQuarkYukawaCouplings@
 
-   model->set_@UpYukawa@(new_Yu);
+   model->set_@UpYukawa@(new_@UpYukawa@);
 }
 
-void @ModelName@_initial_guesser<Two_scale>::calculate_Yd_DRbar()
+void @ModelName@_initial_guesser<Two_scale>::calculate_@DownYukawa@_DRbar()
 {
    Eigen::Matrix<double,3,3> bottomDRbar(Eigen::Matrix<double,3,3>::Zero());
    bottomDRbar(0,0) = md_guess;
    bottomDRbar(1,1) = ms_guess;
    bottomDRbar(2,2) = mb_guess;
 
-   Eigen::Matrix<double,3,3> new_Yd;
+   Eigen::Matrix<double,3,3> new_@DownYukawa@;
 
 @setDRbarDownQuarkYukawaCouplings@
 
-   model->set_@DownYukawa@(new_Yd);
+   model->set_@DownYukawa@(new_@DownYukawa@);
 }
 
-void @ModelName@_initial_guesser<Two_scale>::calculate_Ye_DRbar()
+void @ModelName@_initial_guesser<Two_scale>::calculate_@ElectronYukawa@_DRbar()
 {
    Eigen::Matrix<double,3,3> electronDRbar(Eigen::Matrix<double,3,3>::Zero());
    electronDRbar(0,0) = me_guess;
    electronDRbar(1,1) = mm_guess;
    electronDRbar(2,2) = mtau_guess;
 
-   Eigen::Matrix<double,3,3> new_Ye;
+   Eigen::Matrix<double,3,3> new_@ElectronYukawa@;
 
 @setDRbarElectronYukawaCouplings@
 
-   model->set_@ElectronYukawa@(new_Ye);
+   model->set_@ElectronYukawa@(new_@ElectronYukawa@);
 }
 
 void @ModelName@_initial_guesser<Two_scale>::guess_soft_parameters()
