--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -56,13 +56,13 @@ private:
    QedQcd oneset;
    double MZDRbar;
    double new_g1, new_g2, new_g3;
-   Eigen::Matrix<double,3,3> new_Yu, new_Yd, new_Ye;
+   Eigen::Matrix<double,3,3> new_@UpYukawa@, new_@DownYukawa@, new_@ElectronYukawa@;
 
    void calculate_DRbar_gauge_couplings();
    void calculate_DRbar_yukawa_couplings();
-   void calculate_Yu_DRbar();
-   void calculate_Yd_DRbar();
-   void calculate_Ye_DRbar();
+   void calculate_@UpYukawa@_DRbar();
+   void calculate_@DownYukawa@_DRbar();
+   void calculate_@ElectronYukawa@_DRbar();
    double calculate_delta_alpha_em(double) const;
    double calculate_delta_alpha_s(double) const;
    void update_scale();
