--- a/templates/two_scale_initial_guesser_low_scale_model.hpp.in
+++ b/templates/two_scale_initial_guesser_low_scale_model.hpp.in
@@ -53,11 +53,24 @@ private:
    @ModelName@<Two_scale>* model;
    @ModelName@_input_parameters input_pars;
    QedQcd oneset;
+   double mu_guess;
+   double mc_guess;
+   double mt_guess;
+   double md_guess;
+   double ms_guess;
+   double mb_guess;
+   double me_guess;
+   double mm_guess;
+   double mtau_guess;
    @ModelName@_low_scale_constraint<Two_scale> low_constraint;
    @ModelName@_susy_scale_constraint<Two_scale> susy_constraint;
 
    void guess_susy_parameters();
    void guess_soft_parameters();
+   void calculate_DRbar_yukawa_couplings();
+   void calculate_@UpYukawa@_DRbar();
+   void calculate_@DownYukawa@_DRbar();
+   void calculate_@ElectronYukawa@_DRbar();
 };
 
 } // namespace flexiblesusy
