--- a/templates/two_scale_low_scale_constraint.cpp.in
+++ b/templates/two_scale_low_scale_constraint.cpp.in
@@ -49,9 +49,9 @@ namespace flexiblesusy {
    , inputPars()
    , oneset()
    , MZDRbar(0.)
-   , new_g1(0.)
-   , new_g2(0.)
-   , new_g3(0.)
+   , new_@hyperchargeCoupling@(0.)
+   , new_@leftCoupling@(0.)
+   , new_@strongCoupling@(0.)
    , new_@UpYukawa@(Eigen::Matrix<double,3,3>::Zero())
    , new_@DownYukawa@(Eigen::Matrix<double,3,3>::Zero())
    , new_@ElectronYukawa@(Eigen::Matrix<double,3,3>::Zero())
@@ -65,9 +65,9 @@ namespace flexiblesusy {
    , model(0)
    , inputPars(inputPars_)
    , oneset(oneset_)
-   , new_g1(0.)
-   , new_g2(0.)
-   , new_g3(0.)
+   , new_@hyperchargeCoupling@(0.)
+   , new_@leftCoupling@(0.)
+   , new_@strongCoupling@(0.)
    , new_@UpYukawa@(Eigen::Matrix<double,3,3>::Zero())
    , new_@DownYukawa@(Eigen::Matrix<double,3,3>::Zero())
    , new_@ElectronYukawa@(Eigen::Matrix<double,3,3>::Zero())
@@ -91,9 +91,9 @@ void @ModelName@_low_scale_constraint<Two_scale>::apply()
 
 @applyConstraint@
 
-   model->set_@hyperchargeCoupling@(new_g1);
-   model->set_@leftCoupling@(new_g2);
-   model->set_@strongCoupling@(new_g3);
+   model->set_@hyperchargeCoupling@(new_@hyperchargeCoupling@);
+   model->set_@leftCoupling@(new_@leftCoupling@);
+   model->set_@strongCoupling@(new_@strongCoupling@);
 
    model->set_@UpYukawa@(new_@UpYukawa@);
    model->set_@DownYukawa@(new_@DownYukawa@);
@@ -130,9 +130,9 @@ void @ModelName@_low_scale_constraint<Two_scale>::reset()
    scale = initial_scale_guess;
    model = NULL;
    oneset = QedQcd();
-   new_g1 = 0.;
-   new_g2 = 0.;
-   new_g3 = 0.;
+   new_@hyperchargeCoupling@ = 0.;
+   new_@leftCoupling@ = 0.;
+   new_@strongCoupling@ = 0.;
    new_@UpYukawa@ = Eigen::Matrix<double,3,3>::Zero();
    new_@DownYukawa@ = Eigen::Matrix<double,3,3>::Zero();
    new_@ElectronYukawa@ = Eigen::Matrix<double,3,3>::Zero();
