--- a/templates/two_scale_low_scale_constraint.hpp.in
+++ b/templates/two_scale_low_scale_constraint.hpp.in
@@ -55,7 +55,7 @@ private:
    @ModelName@_input_parameters inputPars;
    QedQcd oneset;
    double MZDRbar;
-   double new_g1, new_g2, new_g3;
+   double new_@hyperchargeCoupling@, new_@leftCoupling@, new_@strongCoupling@;
    Eigen::Matrix<double,3,3> new_@UpYukawa@, new_@DownYukawa@, new_@ElectronYukawa@;
 
    void calculate_DRbar_gauge_couplings();
