--- a/model_files/LHInputMSSM/FlexibleSUSY.m.in
+++ b/model_files/LHInputMSSM/FlexibleSUSY.m.in
@@ -63,7 +63,7 @@ InitialGuessAtLowScale = {
    {vu, SM[vev] Sin[ArcTan[TanBeta]]},
    {Yu, Automatic},
    {Yd, Automatic},
-   {Ye, Automatic},
+   {Ye, Automatic}
 };
 
 InitialGuessAtHighScale = {
