--- a/model_files/MRSSM/FlexibleSUSY.m.in
+++ b/model_files/MRSSM/FlexibleSUSY.m.in
@@ -36,7 +36,7 @@ InitialGuessAtLowScale = {
    {vu, SM[vev] Sin[ArcTan[TanBeta]]},
    {Yu, Automatic},
    {Yd, Automatic},
-   {Ye, Automatic},
+   {Ye, Automatic}
 };
 
 OnlyLowEnergyFlexibleSUSY = True;
