enable/disable multi-threading at the compilation level
This avoids to recreate the spectum generator C++ code in case
multi-threading should be switched on/off.  On just needs to
re-compile defining/undefining ENABLE_THREADS

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -25,3 +25,8 @@
 #define FC                    "@FC@"
 #define FFLAGS                "@FFLAGS@"
 #define FLIBS                 "@FLIBS@"
+
+/* Switches */
+
+/* Enable multi-threading */
+#undef ENABLE_THREADS
