name module names after the model, not after the library
This makes the phony build targets more intuitive, for example we now
have:

   make all-MSSM
   make clean-MSSM

--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -1,5 +1,5 @@
 DIR          := @DIR@
-MODNAME      := lib@CLASSNAME@
+MODNAME      := @CLASSNAME@
 SARAH_MODEL  := @MODEL@
 
 LIB@CLASSNAME@_SRC :=
@@ -85,7 +85,7 @@ LIB@CLASSNAME@_DEP := \
 EXE@CLASSNAME@_DEP := \
 		$(EXE@CLASSNAME@_OBJ:.o=.d)
 
-LIB@CLASSNAME@     := $(DIR)/$(MODNAME)$(LIBEXT)
+LIB@CLASSNAME@     := $(DIR)/lib$(MODNAME)$(LIBEXT)
 
 RUN_@CLASSNAME@_OBJ := $(DIR)/run_@CLASSNAME@.o
 RUN_@CLASSNAME@_EXE := $(DIR)/run_@CLASSNAME@.x
