explain sub-model syntax and add two example calls

--- a/config/list_sarah_model_files.sh.in
+++ b/config/list_sarah_model_files.sh.in
@@ -10,7 +10,12 @@
 
 if test $# -ne 1; then
     echo "Error: 1 argument required"
-    echo "Usage: $0 <sarah-model-name>"
+    echo "Usage: $0 <sarah-model-name>[/<sub-model>]"
+    echo ""
+    echo "Examples:"
+    echo ""
+    echo "   $0 MSSM"
+    echo "   $0 MSSM/CKM"
     exit 1
 fi
 
