--- a/templates/two_scale_model.cpp.in
+++ b/templates/two_scale_model.cpp.in
@@ -50,6 +50,18 @@ using namespace @ModelName@_info;
 #define INPUT(parameter) model->get_input().parameter
 #define LOCALINPUT(parameter) input.parameter
 
+#ifdef ENABLE_THREADS
+std::recursive_mutex CLASSNAME::mtx_fortran;
+#endif
+
+#ifdef ENABLE_THREADS
+#define LOCK_MUTEX() mtx_fortran.lock()
+#define UNLOCK_MUTEX() mtx_fortran.unlock()
+#else
+#define LOCK_MUTEX()
+#define UNLOCK_MUTEX()
+#endif
+
 CLASSNAME::@ModelName@(const @ModelName@_input_parameters& input_)
    : Two_scale_model()
    , @ModelName@_soft_parameters(input_)
