--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -71,6 +71,13 @@ ifeq ($(ENABLE_COMPILE),yes)
 all:     alllib allexec
 endif
 
+install-src::
+	mkdir -p $(INSTALL_DIR)
+
+ifeq ($(ENABLE_META),yes)
+install-src:: allsrc
+endif
+
 include config/abspathx.mk
 include $(patsubst %, %/module.mk, $(MODULES))
 
