--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -153,10 +153,10 @@ all-$(MODNAME): $(LIB@CLASSNAME@)
 ifneq ($(INSTALL_DIR),)
 install-src::
 		install -d $(@CLASSNAME@_INSTALL_DIR)
-		install -m 0 $(LIB@CLASSNAME@_SRC) $(@CLASSNAME@_INSTALL_DIR)
-		install -m 0 $(LIB@CLASSNAME@_HDR) $(@CLASSNAME@_INSTALL_DIR)
-		install -m 0 $(EXE@CLASSNAME@_SRC) $(@CLASSNAME@_INSTALL_DIR)
-		install -m 0 $(@CLASSNAME@_MK) $(@CLASSNAME@_INSTALL_DIR)
+		install -m u=rw,g=r,o=r $(LIB@CLASSNAME@_SRC) $(@CLASSNAME@_INSTALL_DIR)
+		install -m u=rw,g=r,o=r $(LIB@CLASSNAME@_HDR) $(@CLASSNAME@_INSTALL_DIR)
+		install -m u=rw,g=r,o=r $(EXE@CLASSNAME@_SRC) $(@CLASSNAME@_INSTALL_DIR)
+		install -m u=rw,g=r,o=r $(@CLASSNAME@_MK) $(@CLASSNAME@_INSTALL_DIR)
 endif
 
 clean-$(MODNAME)-dep:
